--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
 body {
+  width:350px;
+  height:350px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #242424;
+  color: #ffffff
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.chrome-extension-logo{
+  width:60px;
+  height: 60px;
+}
+
+.top-container{
+  margin-top: 0;
+  display: flex;
+  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.close-popup{
+  border: none;
+  background-color: #242424;
+  color : #e0e0e0;
+  width:20px;
+  margin-right: 10px;
+}
+
+.logo-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.url-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.refresh-container{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.website-title{
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.bottom-container{
+  padding: 10px;
 }
