--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  width:350px;
-  height:350px;
+  width:550px;
+  height:450px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,7 +8,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #242424;
-  color: #ffffff
+  color: #ffffff;
+  padding: 5px;
 }
 
 code {
@@ -16,52 +17,3 @@ code {
     monospace;
 }
 
-.chrome-extension-logo{
-  width:60px;
-  height: 60px;
-}
-
-.top-container{
-  margin-top: 0;
-  display: flex;
-  justify-content: flex-start;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.close-popup{
-  border: none;
-  background-color: #242424;
-  color : #e0e0e0;
-  width:20px;
-  margin-right: 10px;
-}
-
-.logo-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.url-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.refresh-container{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.website-title{
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-.bottom-container{
-  padding: 10px;
-}
