--- a/src/components/index.css
+++ b/src/components/index.css
@@ -50,7 +50,7 @@
 
 
   .bookmark-info {
-    padding: 0;
+    padding: 5px;
     margin-top: 0;
     background-color: #3b3b3b;
     display: flex;
@@ -136,4 +136,35 @@
   
   .search-icon{
     color: white;
+  }
+
+  .form-field {
+    margin-bottom: 10px;
+  }
+  
+  label {
+    display: block;
+    font-size: 20px;
+    margin-bottom: 2px;
+  }
+
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #242424;
+  border-radius: 4px;
+}
+
+
+.signup-button {
+    background-color: #242424;
+    color: #fff;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-right: 10px;
   }
