--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,153 +1,144 @@
-.chrome-extension-logo{
-    width:60px;
-    height: 60px;
-  }
-  
-  .top-container{
-    margin-top: 0;
-    display: flex;
-    justify-content: flex-start;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .close-popup{
-    border: none;
-    background-color: #242424;
-    color : #e0e0e0;
-    width:20px;
-    margin-right: 10px;
-  }
-  
-  .logo-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .url-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .refresh-container{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .website-title{
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-  
-  .bottom-container{
-    padding: 10px;
-  }
+.chrome-extension-logo {
+  width: 60px;
+  height: 60px;
+}
 
+.top-container {
+  margin-top: 0;
+  display: flex;
+  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .bookmark-info {
-    padding: 5px;
-    margin-top: 5px;
-    background-color: #3b3b3b;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+.close-popup {
+  border: none;
+  background-color: #242424;
+  color: #e0e0e0;
+  width: 20px;
+  margin-right: 10px;
+}
 
+.logo-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
 
-  .rating {
-    user-select: none;
-    padding: 0;
-    margin: 0;
-    padding-bottom: 1rem;
-  }
+.url-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .stars {
-    font-size: 2rem;
-    color: #d9d9d9;
-    background-color: unset;
-    border: none;
-  }
+.refresh-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 
-  .add-bookmark {
-    font-family: "Inter", sans-serif;
-    font-size: large;
-    font-weight: bold;
-    border: none;
-    background-color: green;
-    color: white;
-    height: 2.8rem;
-    width: 70%;
-    border-radius: 50px;
-    cursor: pointer;
-    margin-bottom: 0;
-    padding-bottom: 0;
-  }
+.website-title {
+  margin-bottom: 0;
+  margin-top: 0;
+}
 
-  .footer-bar {
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .footer-top-items{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
+.bottom-container {
+  padding: 10px;
+}
 
-  .footer-item{
-    border: none;
-    padding: 0.2rem;
-    display: flex;
-    text-align: center;
-    margin: 0.2rem;
-  }
+.bookmark-info {
+  padding: 5px;
+  margin-top: 5px;
+  background-color: #3b3b3b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-  .like-button{
-    font-size: 1rem;
-    padding-bottom: 0.3rem;
-    color: white;
-    background-color: unset;
-    border: none;
-  }
+.rating {
+  padding: 0;
+  margin: 0;
+  padding-bottom: 1rem;
+}
 
-  .bear-image{
-    width:200px;
-    height:200px;
-  }
+.add-bookmark {
+  font-family: "Inter", sans-serif;
+  font-size: large;
+  font-weight: bold;
+  border: none;
+  background-color: #242424;
+  color: white;
+  height: 2.8rem;
+  width: 70%;
+  border-radius: 50px;
+  cursor: pointer;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 
+.add-bookmark:hover {
+  border: #ffebee solid 2px;
+}
 
-  .footer-item.active {
-    color: #FFAB09;
-  }
-  
-  .footer-item {
-    cursor: pointer;
-    color: white;
-  }
-  
-  .search-icon{
-    color: white;
-  }
+.footer-bar {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .form-field {
-    margin-bottom: 10px;
-  }
-  
-  label {
-    display: block;
-    font-size: 20px;
-    margin-bottom: 2px;
-  }
+.footer-top-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 
+.footer-item {
+  border: none;
+  padding: 0.2rem;
+  display: flex;
+  text-align: center;
+  margin: 0.2rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.like-button {
+  font-size: 1rem;
+  padding-bottom: 0.3rem;
+  color: white;
+  background-color: unset;
+  border: none;
+}
+
+.bear-image {
+  width: 200px;
+  height: 200px;
+}
+
+.footer-item {
+  cursor: pointer;
+  color: white;
+}
+
+.search-icon {
+  color: white;
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 2px;
+}
 
 input[type="text"],
 input[type="password"] {
@@ -157,14 +148,13 @@ input[type="password"] {
   border-radius: 4px;
 }
 
-
 .signup-button {
-    background-color: #242424;
-    color: #fff;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-weight: bold;
-    margin-right: 10px;
-  }
+  background-color: #242424;
+  color: #fff;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-right: 10px;
+}
