--- a/src/components/index.css
+++ b/src/components/index.css
@@ -99,12 +99,14 @@
 
 .footer-item {
   border: none;
-  padding: 0.2rem;
+  padding: 0.4rem;
   display: flex;
   text-align: center;
   margin: 0.2rem;
   padding-bottom: 0;
   margin-bottom: 0;
+  padding-top: 0;
+  margin-top: 0;
   padding-left: 0;
 }
 
