--- a/src/components/index.css
+++ b/src/components/index.css
@@ -16,7 +16,7 @@
   background-color: #242424;
   color: #e0e0e0;
   width: 20px;
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .logo-container {
@@ -159,4 +159,8 @@ input[type="password"] {
   cursor: pointer;
   font-weight: bold;
   margin-right: 10px;
+}
+
+.temp-container {
+  text-align: center;
 }
