--- a/src/components/index.css
+++ b/src/components/index.css
@@ -138,15 +138,16 @@
 
 label {
   display: block;
-  font-size: 20px;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 input[type="text"],
 input[type="password"] {
-  width: 100%;
+  width: 80vh;
   padding: 8px;
-  border: 1px solid #242424;
+  border: 1px solid #3b3b3b;
+  background-color: #242424;
   border-radius: 4px;
 }
 
@@ -158,7 +159,7 @@ input[type="password"] {
   border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
-  margin-right: 10px;
+  width:150px;
 }
 
 .temp-container {
@@ -171,4 +172,20 @@ input[type="password"] {
 
 .inactive{
     color:#8b8b8b
+}
+
+.signup-container{
+    padding: 30px;
+  margin-top: 5px;
+  background-color: #3b3b3b;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.signup-button-container{
+    margin-top:10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
