--- a/src/components/index.css
+++ b/src/components/index.css
@@ -134,6 +134,7 @@
 
 .form-field {
   margin-bottom: 10px;
+  color: white;
 }
 
 label {
@@ -175,7 +176,7 @@ input[type="password"] {
 }
 
 .signup-container{
-    padding: 30px;
+  padding: 30px;
   margin-top: 5px;
   background-color: #3b3b3b;
   display: flex;
@@ -188,4 +189,26 @@ input[type="password"] {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.sign-error-label {
+  text-align: right;
+  color: red;
+}
+
+.form-field-error {
+  margin-bottom: 10px;
+  color: white;
+  border: solid 1px red !important;
+}
+
+.signup-button-error {
+  background-color: #242424;
+  color: #fff;
+  padding: 8px 16px;
+  border: solid 1px red;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  width:150px;
 }
